--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 # Игнорировать всю папку "Тестовое задание для Тензор"
-Тестовые задания\Тестовое задание для Тензор/
+Тестовые задания\Тестовое задание для Тензора/
