--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 # Игнорировать всю папку "Тестовое задание для Тензор"
-Тестовые задания\Тестовое задание для Тензор/
+Тестовые задания/Тестовое задание для Тензор/*
+Тестовые задания/Тестовое задание для Тензор/
